--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "@angular/ssr": "^20.1.6",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "vercel": "^47.0.5"
   },
   "devDependencies": {
     "@angular/build": "^20.1.6",
