--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "prestart": "node scripts/generate_posts.js",
     "start": "ng serve",
     "build": "ng build",
+    "build:blog-assets": "node scripts/generate_posts.js",
+    "build:with-blog": "npm run build:blog-assets && ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:portfolio_website": "node dist/portfolio_website/server/server.mjs"
@@ -35,9 +38,11 @@
     "@angular/ssr": "^20.1.6",
     "@vercel/analytics": "^1.5.0",
     "express": "^5.1.0",
+    "marked": "^8.0.0",
+    "dompurify": "^3.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "vercel": "^47.0.5"
+    "vercel": "^50.1.3"
   },
   "devDependencies": {
     "@angular/build": "^20.1.6",
@@ -46,6 +51,7 @@
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
+    "@types/dompurify": "^2.3.3",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
